# data_ingestion_ex8-producer

./: .gitignore  README.md  pyproject.toml
src/ex8_producer/: app.py  settings.py
src/ex8_producer/schemas/: reclamacoes.avsc
src/ex8_producer/utils/: functions.py
